# Terrasync

./: .gitignore  Cargo.toml  DOCS.md  PRD.md  README.md  REFER.md
foxmq.d/: address-book.toml  key_0.pem  users.toml
scripts/: demo.sh
src/: grid.rs  main.rs  types.rs
viz/: package-lock.json  package.json  server.js
viz/public/: app.js  index.html
