[package]
name = "vertex-hack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "term-viz"
path = "src/bin/term_viz.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
rumqttc = "0.25"
ratatui = "0.28"
crossterm = "0.28"
